# cpp-csp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  appveyor.yml  index.html  license.md  main.cpp  params.json  readme.md
benchmarks/: CMakeLists.txt  test-benchmark.cpp
csp/: alt.h  alting_barrier.h  barrier.h  chan.h  chan_data_store.h  csp.h  guard.h  par.h  patterns.h  poison_exception.h  skip.h  timer.h
csp/plugnplay/: and.h  dynamic_delta.h  fixed_delay.h  merge.h  nand.h  plus.h  printer.h  sign.h  transform.h
csp/skeletons/: block.h  connector.h  skeletons.h
demos/: CMakeLists.txt  busy_commstime.cpp  busy_commstime2.cpp  busy_stressedalt.cpp  commstime1.cpp  commstime2.cpp  commstime3.cpp  commstime4.cpp  commstime5.cpp  commstime6.cpp  diningphil.cpp  fiber_commstime1.cpp  mandelbrot1.cpp  mandelbrot2.cpp  mandelbrot3.cpp  montecarlopi.cpp  stressedalt.cpp  test.cc  test_atomic_alt.cpp  test_busy_barrier.cpp  test_skeletons.cpp
docs/: Doxyfile.in
examples/: CMakeLists.txt  README.md
examples/commstime/: CMakeLists.txt  commstime.cpp
examples/concurrency-models/: CMakeLists.txt  conc-models.cpp
examples/fairplex/: CMakeLists.txt  fairplex.cpp
examples/polling/: CMakeLists.txt  polling.cpp
examples/producer-consumer/: CMakeLists.txt  prod-con.cpp
include/: util.hpp
include/csp/: alternative.hpp  atomic_implementation.h  atomic_implementation.hpp  barrier.hpp  channel.h  channel.hpp  concurrency.hpp  concurrency_model.hpp  csp.h  csp.hpp  fiber_implementation.hpp  guard.hpp  parallel.h  parallel.hpp  poison_exception.hpp  primitives.h  process.h  process.hpp  stop.h  thread_implementation.hpp  thread_implementationl.hpp  timer.h  timer.hpp
include/csp/net/: net_chan.h
include/csp/plugnplay/: black_hole.h  delta.h  demultiplex.h  identity.h  mult.h  multiplex_packet.h  nor.h  or.h  plex.h  regulate.h  substitute.h  tail.h  times.h  xor.h
include/csp/skeletons/: connector.h
include/plugnplay/: deparaplex.h  generate.h  multiplex.h  numbers.h  pairs.h  paraplex.h  plugnplay.h  prefix.h  regular.h  successor.h
src/: 01a-prod-con.cpp  02a-commstime.cpp  CMakeLists.txt  stressed_bar.cpp  stressed_select.cpp
src/classic/: CMakeLists.txt  diningphil.cpp
src/commstime/: CMakeLists.txt  busy_commstime.cpp  busy_commstime2.cpp  commstime1.cpp  commstime2.cpp  commstime3.cpp  commstime4.cpp  commstime5.cpp  commstime6.cpp
src/mandelbrot/: CMakeLists.txt  mandelbrot1.cpp  mandelbrot2.cpp  mandelbrot3.cpp
src/parallel_benchmarks/: CMakeLists.txt  montecarlopi.cpp
src/stressedalt/: CMakeLists.txt  busy_stressedalt.cpp  stressedalt.cpp
test/: CMakeLists.txt  channel-tests.cc  channel-tests.cpp  process-tests.cc  process-tests.cpp  test.cc  test.cpp
