add_executable(commstime1 commstime1.cpp)
target_link_libraries(commstime1 ${LIB_FILES})
add_executable(commstime2 commstime2.cpp)
target_link_libraries(commstime2 ${LIB_FILES})
add_executable(commstime3 commstime3.cpp)
target_link_libraries(commstime3 ${LIB_FILES})
add_executable(commstime4 commstime4.cpp)
target_link_libraries(commstime4 ${LIB_FILES})
add_executable(commstime5 commstime5.cpp)
target_link_libraries(commstime5 ${LIB_FILES})
add_executable(commstime6 commstime6.cpp)
target_link_libraries(commstime6 ${LIB_FILES})
add_executable(busy_commstime busy_commstime.cpp)
target_link_libraries(busy_commstime ${LIB_FILES})
add_executable(busy_commstime2 busy_commstime2.cpp)
target_link_libraries(busy_commstime2 ${LIB_FILES})